yaml/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: nginx-ingress
  namespace: default
spec:                                                                                                                                               
  ingressClassName: cilium          # <-- This is required for Cilium's ingress & LB
  rules:
  - host: nginx.app
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
